# Newsful

./: .editorconfig  .gitignore  LICENSE  README.md
.github/workflows/: lint.yml  python-lint.yml
backend/: .gitignore  README.md  main.py  poetry.toml  pyproject.toml  requirements.txt  test.ipynb
backend/assets/: sources.csv  sources.parquet  websites.csv
backend/core/: __init__.py  db.py  decorators.py  fact.py  image.py  postprocessors.py  preprocessors.py  utils.py
backend/output/: 1693626833-726711.json  2023-07-24-11-52-31.json  2023-08-08-11-41-22.json
backend/schemas/: Article.py  Articles.py  ChatReply.py  ChatTextInputData.py  Data.py  FactCheckData.py  FactCheckResponse.py  Health.py  ImageInputData.py  InputData.py  TextInputData.py  __init__.py  schemas.py
chatbot/: chat.css  chat.html  chat.js
dashboard/: app.py  pyproject.toml  requirements.txt  users.db
dashboard/.streamlit/: secrets.toml
dashboard/core/: auth.py
dashboard/schema/: __init__.py
frontend/: background.js  content.js  manifest.json  package-lock.json  package.json  popup.css  popup.html  popup.js  style.css  styles.css  tailwind.config.js  widget.html  widget.js
landing page/newsful/: index.html
landing page/newsful/assets/css/: style.css
website/: app.py  pyproject.toml  requirements.txt  users.db
website/.streamlit/: config.toml
website/core/: auth.py
website/schema/: Article.py
