[tool.poetry]
name = "newsful"
version = "0.1.0"
description = "The Backend API for Newsful - A Fact Checking Browser Plugin"
authors = [
    "Siddhesh Agarwal <siddhesh.agarwal@gmail.com>",
    "Rithik Raj <rithu0644@gmail.com>",
]
readme = "README.md"
repository = "https://github.com/centille/Newsful/"
license = "GPL-3.0-only"
keywords = ["news", "fact-checking", "fake-news", "newsful", "newsful-backend"]
build = "poetry.core.masonry.api.build"
maintainers = [
    "Siddhesh Agarwal <siddhesh.agarwal@gmail.com>",
    "Rithik Raj <rithu0644@gmail.com"
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
waybackpy = "^3.0.6"
fastapi = {extras = ["standard"], version = "^0.115.0"}
pandas = "^2.0.3"
pymongo = {extras = ["srv"], version = "^4.10.1"}
python-dotenv = "^1.0.0"
uvicorn = "^0.23.1"
openai = "^1.51.0"
google-api-python-client = "^2.94.0"
deep-translator = "^1.11.4"
pytesseract = "^0.3.10"
ujson = "^5.10.0"
pydantic = "^2.9.2"
langchain = "^0.3.1"
langchain-core = "^0.3.7"
langchain-openai = "^0.2.1"
langchain-community = "^0.3.1"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
py_version = 310
line_length = 120
skip_glob = ["./assets/*", "./env/*", "./models/*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
