[tool.poetry]
name = "newsful"
version = "0.1.0"
description = "The Backend API for Newsful Browser Plugin"
authors = ["Siddhesh Agarwal <siddhesh.agarwal@gmail.com>"]
readme = "README.md"
repository = "https://github.com/centille/Newsful/"
license = "GPL-3.0-only"
build = "poetry.core.masonry.api.build"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
waybackpy = "^3.0.6"
fastapi = {extras = ["standard"], version = "^0.115.5"}
pandas = "^2.0.3"
pymongo = {extras = ["srv"], version = "^4.10.1"}
python-dotenv = "^1.0.0"
uvicorn = "^0.32.0"
openai = "^1.51.0"
deep-translator = "^1.11.4"
pytesseract = "^0.3.10"
ujson = "^5.10.0"
pydantic = "^2.9.2"
logfire = {extras = ["fastapi"], version = "^1.0.1"}
instructor = "^1.5.2"
tiktoken = "^0.8.0"
groq = "^0.11.0"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
py_version = 310
line_length = 120
skip_glob = ["./assets/*"]

[tool.logfire]
pydantic_plugin_record = "failure"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
