[tool.poetry]
name = "newsful-dashboard"
version = "0.1.0"
description = "Dashboard to view the Newsful database"
authors = ["Siddhesh Agarwal <siddhesh.agarwal@gmail.com>"]
readme = "README.md"
packages = [{include = "newsful_app"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.37.0"
pymongo = "^4.6.3"
python-dotenv = "^1.0.0"
pydantic = "^2.4.0"
matplotlib = "^3.7.2"
streamlit-aggrid = "^0.3.4.post3"
plotly = "^5.15.0"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
